--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
-image {
+:root{
+  font-family: "Alice", serif;
+  line-height: 150%;
+  color: #573A37;
+}
+
+body {
+  background-image: url(assets/bg-image.jpg);
+  background-size: cover;
+}
+
+#page {
+  box-sizing: border-box;
+  width: 800px;
+  padding: 24px;
+  background-color: #F0E8C2;
+  border-radius: 24px;
+  margin: 48px auto;
+}
+
+img {
   border-radius: 16px;
+}
+
+h1{
+  line-height: 140%;
+  font-size: 40px;
+}
+
+h2{
+  font-size: 24px;
+}
+
+h1,h2{
+  color: #291B1A;
 }
